[package]
name = "hkrpg-fps-unlocker"
version = "0.1.0"
edition = "2024"

[lib]
name = "fpsunlocker"
crate-type = ["cdylib"]

[dependencies]
windows = {version = "0.61.3", features = [
    "Win32_System_LibraryLoader",
]}
ctor = "0.4.2"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true        # Link-time optimization.
opt-level = 3     # Optimize for speed.
codegen-units = 1 # Maximum size reduction optimizations.
